procurementmanagement/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: procurementmanagement
  namespace: procurement
  labels:
    app: procurementmanagement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: procurementmanagement
  template:
    metadata:
      labels:
        app: procurementmanagement
    spec:
      containers:
        - name: procurementmanagement
          image: procurementacr.azurecr.io/procurementmanagement:v1
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 250m
          readinessProbe:
            httpGet:
              path: '/deliverymanagements'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          #livenessProbe:
          #  httpGet:
          #    path: '/deliverymanagements/failed'
          #    port: 8090
          #  initialDelaySeconds: 30
          #  timeoutSeconds: 2
          #  periodSeconds: 5
          #  failureThreshold: 5
