procurementmanagement/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: procurementmanagement
  labels:
    app: procurementmanagement
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: procurementmanagement
